syntax = "proto3";

package disgover;

message Empty {
}

message Authentication {
    string Hash = 2;
    int64  Time = 3;
    string Signature = 4;
}

message Endpoint {
	string Host = 1;
	int64 Port = 2;
}

message Node {
	string 	 Address = 1;
	Endpoint GrpcEndpoint = 2;
	Endpoint HttpEndpoint = 3;
	string   Type = 4;
}

message PingSeed {
    Authentication  Authentication = 1;
    Node            Node = 2;
}

message Update {
    Authentication Authentication = 1;
	repeated Node  Delegates = 2;
}

message SoftwareUpdate {
    Authentication Authentication = 1;
    string         Hash = 2;
    string         FileName = 3;
    bytes          Software = 4;
    string         Signature = 5;
    string         ScheduledReboot = 6;
}

service DisgoverGrpc {
	rpc PingSeedGrpc(PingSeed) returns (Update) {}
	rpc UpdateGrpc(Update) returns (Empty) {}
    rpc UpdateSoftwareGrpc(SoftwareUpdate) returns (Empty) {}
}

